@@ -9,11 +9,13 @@
 			<label index="categories">Categories</label>
 			<label index="categories_label">Categories: </label>
 			<label index="categories_not_exist">Category doesn't exist</label>
+			<label index="sc_categories_label">Categories: </label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="categories">Catégories</label>
 			<label index="categories_label">Catégories: </label>
 			<label index="categories_not_exist">La catégorie n'existe pas.</label>
+			<label index="sc_categories_label">Catégories</label>
 		</languageKey>
 	</data>
 </T3locallang>
