@@ -51,7 +51,7 @@
 				<!-- ###TIERS_ITEM### end -->
 			</div>
 		</div>
-		
+		###SELECTED_CRITERIA###	
 		<div class="button">
 			<input type="submit" name="###PREFIXID###[submit]" value="###SEARCHBUTTON_VALUE###" id="###PREFIXID###_submitSearch"/>
 		</div>
@@ -60,7 +60,35 @@
 <!-- ###TEMPLATE_SEARCH### end -->
 
 
-
+<!-- ###TEMPLATE_SELECTED_CRITERIA### start-->
+	<div class="###PREFIXID###_selectedCriteria">
+		<h3 class="###PREFIXID###_sc_title">###SC_TITLE###</h3>
+		<!-- ###SUBPART_SC_KEYWORDS### start-->
+		<div class="###PREFIXID###_sc_keywords">
+			<p class="###PREFIXID###_sc_label">###SC_KEYWORDS_LABEL###</p>
+			<p class="###PREFIXID###_sc_value">###SC_KEYWORDS_VALUE###</p>
+		</div>
+		<!-- ###SUBPART_SC_KEYWORDS### end-->
+		<!-- ###SUBPART_SC_CATEGORIES### start-->
+		<div class="###PREFIXID###_sc_categories">
+			<p class="###PREFIXID###_sc_label">###SC_CATEGORIES_LABEL###</p>
+			<p class="###PREFIXID###_sc_value">###SC_CATEGORIES_VALUE###</p>
+		</div>
+		<!-- ###SUBPART_SC_CATEGORIES### end-->
+		<!-- ###SUBPART_SC_TIERS### start-->
+		<div class="###PREFIXID###_sc_tiers">
+			<p class="###PREFIXID###_sc_label">###SC_TIERS_LABEL###</p>
+			<p class="###PREFIXID###_sc_value">###SC_TIERS_VALUE###</p>
+		</div>
+		<!-- ###SUBPART_SC_TIERS### end-->
+		<!-- ###SUBPART_SC_FORMATS### start-->
+		<div class="###PREFIXID###_sc_formats">
+			<p class="###PREFIXID###_sc_label">###SC_FORMATS_LABEL###</p>
+			<p class="###PREFIXID###_sc_value">###SC_FORMATS_VALUE###</p>
+		</div>
+		<!-- ###SUBPART_SC_FORMATS### end-->
+	</div>
+<!-- ###TEMPLATE_SELECTED_CRITERIA### end-->
 
 
 <!-- ###TEMPLATE_LIST### start -->
