@@ -1,3 +1,6 @@
+2012-03-27 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added selected categories informations on search form.
+	
 2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
 	* Version changed to 1.1.2
 	
